# FastGeodesic

./: .gitignore  README.md  bezier.py  diff_geodesic.py  geodesic.py  main.py  main_bezier.py  main_geo.py  main_slang.py  mesh.py  mesh_loader.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  sampling.py  test_diff.py  trace_geodesic.py  ui.py
.github/workflows/: python-package.yml
FastGeodesic/geometry/: sampling.py  utils.py
data/: test_trace_geodesic.txt
fastgeodesic/dataloader/: mesh_loader.py
fastgeodesic/geometry/: mesh.py  trace_geodesic.py
src/: benchmark.py  constants.py  diff_geodesic.py  main.py  main_diff.py  main_slang.py  mesh.py  mesh_loader.py  sampling.py  test_diff.py  trace_geodesic.py  ui.py
src/dataloader/: mesh_loader.py  utils.py
src/fastgeodesic/: constants.py  ui.py
src/fastgeodesic/dataloader/: __init__.py  mesh_loader.py
src/fastgeodesic/geometry/: __init__.py  diff_geodesic.py  geodesic.py  geodesic_utils.py  mesh.py  sampling.py  trace_geodesic.py
src/geodiff/dataloader/: __init__.py  mesh_loader.py
src/geodiff/geometry/: __init__.py  geodesic.py  geodesic_utils.cpp  geodesic_utils.py  mesh.py  sampling.py
src/geometry/: mesh.py  sampling.py  trace_geodesic.py
src/slang/: mesh.slang  trace_geodesic.slang  utils.slang
tests/: test_trace_geodesic.py  test_trace_geodesic_utils.py  write_test_trace.py
