[project]
name = "geodiff"
version = "0.0.1"
authors = [
  { name="Hippolyte Verninas"},
]
description = "A small package to compute differentiable geodesics on triangulated meshes"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE.md"]
dependencies = [
  "torch>=2.7.0",
  "numpy>=2.2.4",
  "tqdm>=4.67.1"
]

[project.urls]
Homepage = "https://github.com/Etyl/FastGeodesic"
Issues = "https://github.com/Etyl/FastGeodesic/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
